--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --fix",
+    "lint": "eslint",
+    "lint:fix": "npm run lint -- --fix",
     "format": "prettier -w ."
   },
   "browserslist": {
@@ -45,6 +46,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
     "prettier": "^2.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test", 
+      "pre-push": "npm run format && npm run lint",
+      "...": "..."
+    }
   }
 }
