--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "latest",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@types/jest": "^27.4.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "axios": "^0.26.0",
+    "framer-motion": "^6.2.6",
+    "jest": "^27.5.1",
     "react": "latest",
     "react-dom": "latest",
     "react-query": "^3.34.15",
     "react-router-dom": "^6.2.1",
     "react-scripts": "latest",
+    "ts-jest": "^27.1.3",
     "typescript": "latest"
   },
   "scripts": {
